Added html and data from DB to the Race page

--- a/src/Views/Club/Index.cshtml
+++ b/src/Views/Club/Index.cshtml
@@ -16,7 +16,7 @@
                                 @item.Title
                             </h4>
                         </div>
-                            <img src="@item.Image" width="100%" height="100%"/>
+                            <img src="@item.Image" />
                         <div class="card-body">
                             <p class="card-text">@item.Description</p>
                             <div class="d-flex justify-content-between align-items-center">
