--- a/src/Views/Race/Index.cshtml
+++ b/src/Views/Race/Index.cshtml
@@ -1,6 +1,35 @@
-﻿@*
+﻿@model IEnumerable<Race>
+@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
 }
-<h1>Races page</h1>
+<div class="album py-5 bg-light">
+    <div class="container">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+            @foreach (var item in Model)
+            {
+                <div class="col">
+                    <div class="card shadow-sm">
+                        <div align="center">
+                            <h4 x="50%" y="50%" fill="#eceeef" dy=".3em">
+                                @item.Title
+                            </h4>
+                        </div>
+                        <img src="@item.Image" />
+                        <div class="card-body">
+                            <p class="card-text">@item.Description</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="btn-group">
+                                    <button type="button" class="btn btn-sm btn-outline-secondary">عرض</button>
+                                    <button type="button" class="btn btn-sm btn-outline-secondary">تعديل</button>
+                                </div>
+                                <small class="text-muted">@item.RaceCategory</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            }
+        </div>
+    </div>
+</div>
