--- a/src/Views/Club/Index.cshtml
+++ b/src/Views/Club/Index.cshtml
@@ -11,12 +11,14 @@
             {
                 <div class="col">
                     <div class="card shadow-sm">
-                        <div align="center">
+                    <a href="~/Club/Detail/@item.Id">
+                        <div class="card shadow-sm"align="center">
                             <h4 x="50%" y="50%" fill="#eceeef" dy=".3em">
                                 @item.Title
                             </h4>
+                            <img src="@item.Image"/>
                         </div>
-                            <img src="@item.Image" />
+                    </a>
                         <div class="card-body">
                             <p class="card-text">@item.Description</p>
                             <div class="d-flex justify-content-between align-items-center">
