--- a/src/Views/Club/Detail.cshtml
+++ b/src/Views/Club/Detail.cshtml
@@ -20,7 +20,7 @@
                         <span class="posted_in"> <strong>Category:</strong> <a rel="tag" href="#">@Model.ClubCategory</a></span>
                     </div>
                     <div class="product_meta">
-                        <span class="posted_in"> <strong>Address:</strong> <a rel="tag" href="#">@Model.Address</a></span>
+                        <span class="posted_in"> <strong>Address:</strong> <a rel="tag" href="#">@Model.Address.ToString()</a></span>
                     </div>
                     @*<div class="m-bot15"> <strong>Price : </strong> <span class="amount-old">$544</span>  <span class="pro-price"> $300.00</span></div>
                     <div class="form-group">
