--- a/src/Views/Race/Create.cshtml
+++ b/src/Views/Race/Create.cshtml
@@ -41,5 +41,5 @@
         <input asp-for="Address.Street" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="street">
         <span asp-validation-for="Address.Street" class="tex-danger"></span>
     </div> 
-    <button type="submit" class="btn btn-primary">Create</button>
+    <button type="submit" class="btn btn-primary">Create Race</button>
 </form>
