--- a/src/Views/Race/Index.cshtml
+++ b/src/Views/Race/Index.cshtml
@@ -1,9 +1,5 @@
 ﻿@model IEnumerable<Race>
-@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+
 <div class="album py-5 bg-light">
     <div class="container">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
@@ -26,7 +22,9 @@
                                     <a asp-controller="Race" asp-action="Detail" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">
                                         View
                                     </a>
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">تعديل</button>
+                                        <a asp-controller="Race" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">
+                                        Edit
+                                    </a>
                                 </div>
                                 <small class="text-muted">@item.RaceCategory</small>
                             </div>
