--- a/src/Views/Shared/_Layout.cshtml
+++ b/src/Views/Shared/_Layout.cshtml
@@ -32,6 +32,9 @@
                         <li class="float-end right">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Log in</a>
                         </li>
+                        <li class="float-end right">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
+                        </li>
                     </ul>
                 </div>
             </div>
