--- a/src/Views/Club/Edit.cshtml
+++ b/src/Views/Club/Edit.cshtml
@@ -2,6 +2,7 @@
 @model Club
 <form method="post" asp-action="Edit" enctype="multipart/form-data">
     <input type="hidden" asp-for="AddressId" value="@Model.AddressId"/>
+    <input type="hidden" asp-for="Image" value="@Model.Image"/>
     <div class="form-group">
         <label asp-for="Title">Title</label>
         <input asp-for="Title" class="form-control" placeholder="title"/>
@@ -16,11 +17,6 @@
         <label asp-for="ClubCategory">Club category</label>
         <select asp-for="ClubCategory" asp-items="@Html.GetEnumSelectList<ClubCategory>()" class="form-control" placeholder="club category"></select>
         <span asp-validation-for="ClubCategory" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="Image">Image</label>
-        <input asp-for="Image" class="form-control" placeholder="image"/>
-        <span asp-validation-for="Image" class="text-danger"></span>
     </div>
     <button type="submit" class="btn btn-primary">Save Club</button>
 </form>
