--- a/src/Views/Race/Index.cshtml
+++ b/src/Views/Race/Index.cshtml
@@ -19,11 +19,14 @@
                             <p class="card-text">@item.Description</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <a asp-controller="Race" asp-action="Detail" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">
+                                    <a asp-controller="Race" asp-action="Detail" asp-route-id="@item.Id" class="btn btn-sm btn-outline-primary">
                                         View
                                     </a>
-                                        <a asp-controller="Race" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">
+                                    <a asp-controller="Race" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">
                                         Edit
+                                    </a>
+                                    <a asp-controller="Race" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-outline-danger">
+                                        Delete
                                     </a>
                                 </div>
                                 <small class="text-muted">@item.RaceCategory</small>
