--- a/src/Views/Race/Index.cshtml
+++ b/src/Views/Race/Index.cshtml
@@ -22,12 +22,15 @@
                                     <a asp-controller="Race" asp-action="Detail" asp-route-id="@item.Id" class="btn btn-sm btn-outline-primary">
                                         View
                                     </a>
-                                    <a asp-controller="Race" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">
-                                        Edit
-                                    </a>
-                                    <a asp-controller="Race" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-outline-danger">
-                                        Delete
-                                    </a>
+                                    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                                    {
+                                        <a asp-controller="Race" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">
+                                            Edit
+                                        </a>
+                                        <a asp-controller="Race" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-outline-danger">
+                                            Delete
+                                        </a>
+                                    }
                                 </div>
                                 <small class="text-muted">@item.RaceCategory</small>
                             </div>
