--- a/src/Views/Shared/_Layout.cshtml
+++ b/src/Views/Shared/_Layout.cshtml
@@ -46,6 +46,11 @@
                         else
                         {
                             <li class="float-end right">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Dashboard" asp-action="Index">
+                                    Dashboard
+                                </a>
+                            </li>
+                            <li class="float-end right">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="SignOut">
                                     Sign out
                                 </a>
