--- a/src/Views/Race/Index.cshtml
+++ b/src/Views/Race/Index.cshtml
@@ -22,7 +22,7 @@
                                     <a asp-controller="Race" asp-action="Detail" asp-route-id="@item.Id" class="btn btn-sm btn-outline-primary">
                                         View
                                     </a>
-                                    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                                    @if (User.Identity.IsAuthenticated && User.IsInRole("admin"))
                                     {
                                         <a asp-controller="Race" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">
                                             Edit
