--- a/src/Views/Dashboard/Index.cshtml
+++ b/src/Views/Dashboard/Index.cshtml
@@ -11,6 +11,9 @@
             <a class="btn btn-primary btn-lg px-4 gap-3" asp-controller="Club" asp-action="Create">
                 Create new Club
             </a>
+            <a class="btn btn-secondary btn-lg px-4 gap-3" asp-controller="Dashboard" asp-action="EditMyProfile">
+                Edit my profile
+            </a>
         </div>
     </div>
 </div>
