--- a/src/Views/Shared/_Layout.cshtml
+++ b/src/Views/Shared/_Layout.cshtml
@@ -64,6 +64,9 @@
                                 </a>
                             </li>
                         }
+                        <li class="nav-item">
+                            @await Html.PartialAsync("_SelectLanguagePartial")
+                        </li>
                     </ul>
                 </div>
             </div>
